# IG-Project

./: CMakeLists.txt  HowToInstall.txt  README.md  README.txt  TODO.txt  wat.txt
Dokumentacija/: Dokumentacija.doc  Plan rada.doc  Plan.doc  Prezentacija.pptx  Prezentacija_Bold.pptx  Tehnička dokumentacija.doc  temp.txt
Engine/: CMakeLists.txt  Engine.h
Engine/Common/: ErrorCheck.cpp  ErrorCheck.h  MathFunctions.cpp  MathFunctions.h  MathFunctions.tpp
Engine/Core/: Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h  Core.h  DefaultCameraHandler.cpp  DefaultCameraHandler.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  Renderer.cpp  Renderer.h  SDLHandler.cpp  SDLHandler.h  Sprite.cpp  Sprite.h  Updateable.cpp  Updateable.h
Engine/GL/: FragmentShader.cpp  FragmentShader.h  FrameBuffer.cpp  FrameBuffer.h  GeometryShader.cpp  GeometryShader.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VertexShader.cpp  VertexShader.h
Engine/Geometry/: IndexContainer.cpp  IndexContainer.h  InstancedModel.cpp  InstancedModel.h  Material.h  Model.cpp  Model.h  ObjectLoader.cpp  ObjectLoader.h  TriangleMesh.cpp  TriangleMesh.h
Engine/Physics/: Car.cpp  Car.h  CarRigidBody.cpp  CarRigidBody.h  ChassisCarController.cpp  ChassisCarController.h  World.cpp  World.h
IRG_project/: CMakeLists.txt  Car.cpp  Car.h  CarCameraHandler.cpp  CarCameraHandler.h  GameEngine.cpp  GameEngine.h  GraphicsSettings.cpp  GraphicsSettings.h  Main.cpp  PostProcessAA.cpp  PostProcessAA.h  RacingTrack.cpp  RacingTrack.h  SimpleShader.frag  SimpleShader.vert  Terrain.cpp  Terrain.h  sprite.vert
IRG_project/Shaders/: DirectionalLight.frag  DirectionalLight.vert  DirectionalLightInstanced.vert  PostProcess.frag  PostProcess.vert  SimpleShader.vert  skybox.frag  skybox.vert  sprite.frag
Resources/: GraphicsSettings.txt  TrackDescription.txt
Resources/CAR/: carbody.mtl  cartire.mtl  leftbacktire.mtl
Resources/Road/: barrier.mtl  road_cross.mtl  road_curve.mtl  road_str.mtl  road_tcross.mtl
Resources/Terrain/: terrain.mtl
Resources/stari_CAR/: rightfronttire.mtl
cmake/Modules/: FindDevIL.cmake  FindGLEW.cmake  FindIrrKlang.cmake  FindLeapSDK.cmake  FindSDL2.cmake
glm/detail/: type_vec3.inl
